--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
-== README
+
 
 Repozytorium aplikacji kończącej kurs w Coder's Lab - Warszawa.
 
-Dostępne pod adresem wieloręczni.herokuapp.com
+Dostępne na [heroku](wieloreczni.herokuapp.com)
